# TestC

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/Cricle/: Circle.cpp  Circle.h
src/Ellips/: Ellips.cpp  Ellips.h  Ellipse.cpp  Ellipse.h
src/Point/: Point.cpp  Point.h
src/Rectangle/: Rectangle.cpp  Rectangle.h
src/Shape/: Shape.cpp  Shape.h
src/ShapeFatory/: ShapeFatory.cpp  ShapeFatory.h
src/Triangle/: Triangle.cpp  Triangle.h
src/Utils/: Utils.h
src/data/: data.txt
